<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/register"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:textColorHint="@color/bambooz_black"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:textColorHint="@color/bambooz_black"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/userEmailEditText"
        app:layout_constraintStart_toStartOf="@+id/userEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/userEmailEditText" />

    <EditText
        android:id="@+id/userLastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"

        android:hint="@string/lase_name"
        android:textColorHint="@color/bambooz_black"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/userNameEditText"
        app:layout_constraintStart_toStartOf="@+id/userNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"/>

    <EditText
        android:id="@+id/userPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:textColorHint="@color/bambooz_black"

        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/userLastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/userLastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/userLastNameEditText" />

    <Button
        android:id="@+id/registerUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_user"
        android:textColor="@color/bambooz_black"
        app:layout_constraintEnd_toEndOf="@+id/userPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/userPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>